Bug 404648 - [1.8][compiler] investigate differences between ECJ & Javac
- prepare running tests on JDK 10 and against javac10